--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -2,20 +2,85 @@
   --background: #ffffff;
   --foreground: #171717;
 }
-
+@keyframes background-pan {
+  0% {
+    background-position: 0% center;
+  }
+  100% {
+    background-position: -200% center;
+  }
+}
+@keyframes scale {
+  0%,
+  100% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(0.5);
+  }
+}
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
-
+h1 > .magic {
+  display: inline-block;
+  position: relative;
+}
+h1 > .magic > .magic-text {
+  background: linear-gradient(
+    to right,
+    darkcyan,
+    lightseagreen,
+    cadetblue,
+    darkcyan
+  );
+  background-size: 200%;
+  animation: background-pan 2s linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  white-space: nowrap;
+}
+.magic-star {
+  --size: clamp(15px, 1vw, 25px);
+  animation: scale 700ms ease forwards;
+  display: block;
+  color: red;
+  height: var(--size);
+  left: var(--star-left);
+  position: absolute;
+  top: var(--star-top);
+  width: var(--size);
+}
+.magic-star > svg {
+  animation: rotate 1000ms linear infinite;
+  display: block;
+  opacity: 0.85;
+}
+.magic-star > svg > path {
+  fill: silver;
+}
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
+.magic {
+  background: linear-gradient(to right, purple, violett, pink, purple);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  white-space: nowrap;
+}
 body {
   color: var(--foreground);
   background: var(--background);
