--- a/src/app/[locale]/components/styles.css
+++ b/src/app/[locale]/components/styles.css
@@ -6,7 +6,13 @@
   width: 100%;
   height: 100%;
 }
+:root {
+  --border: rgb(3, 169, 244);
 
+  --g1: rgb(0, 61, 52); /* Deep Teal */
+  --g2: rgb(0, 122, 108); /* Vibrant Teal */
+  --g3: rgb(72, 169, 153);
+}
 .slide {
   display: flex;
   flex-direction: column;
@@ -58,4 +64,110 @@
   width: 0.75rem;
   height: 0.75rem;
   background-color: grey;
+}
+
+.card {
+  cursor: pointer;
+  position: relative;
+  flex: 1;
+}
+
+.card:hover:before {
+  background-position: 100% 100%;
+  transform: scale(1.08, 1.03);
+}
+
+.card:hover > .card-content {
+  background-position: -20% 0%;
+}
+
+.card:hover > .card-icon {
+  color: white;
+}
+
+.card:hover > .card-content > .card-subtitle > .card-subtitle-word,
+.card:hover > .card-content > .card-button {
+  opacity: 1;
+  transform: translateY(-20%);
+  transition:
+    opacity 0ms,
+    transform 200ms cubic-bezier(0.9, 0.06, 0.15, 0.9);
+}
+.card:before {
+  background: linear-gradient(
+    130deg,
+    transparent 0% 23%,
+    var(--g1) 66%,
+    var(--g2) 83.5%,
+    var(--g3) 100%
+  );
+  border-radius: 10px;
+  background-position: 0% 0%;
+  background-size: 300% 300%;
+  content: "";
+  height: 100%;
+  left: 0px;
+  pointer-events: none;
+  position: absolute;
+  top: 0px;
+  transition:
+    background-position 350ms ease,
+    transform 350ms ease;
+  width: 100%;
+  z-index: 1;
+}
+
+.card-content {
+  background-image: radial-gradient(#ffffff33 8%, transparent 8%);
+  background-position: -10% 0%;
+  background-size: 5vmin 5vmin;
+  height: 100%;
+  padding: 5vmin;
+  position: relative;
+  transition: background-position 350ms ease;
+  width: 100%;
+  z-index: 2;
+}
+
+.card-title,
+.card-subtitle {
+  color: white;
+  margin: 0px;
+}
+
+.card-title {
+}
+
+.card-subtitle {
+  margin-top: 2vmin;
+}
+.card-button {
+  font-weight: 300;
+  opacity: 0.2;
+  position: absolute;
+  color: white;
+  bottom: 1rem;
+  right: 1rem;
+  text-align: end;
+  transform: translateY(20%);
+  transition: none;
+}
+.card-subtitle-word {
+  display: inline-block;
+  margin: 0vmin 0.3vmin;
+  opacity: 0;
+  position: relative;
+  transform: translateY(40%);
+  transition: none;
+}
+
+.card-icon {
+  bottom: 0px;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 7vmin;
+  left: 0px;
+  margin: 5vmin;
+  position: absolute;
+  transition: color 250ms ease;
+  z-index: 2;
 }
